[gd_scene format=3 uid="uid://x7jx4icoqnea"]

[ext_resource type="Script" uid="uid://cfdmg8mugoqgr" path="res://Scenes/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bdh5otduti6jk" path="res://Scenes/mont_run_sheet.png" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://dmyq4fj66v8wi" path="res://Scenes/monk_jump_Sheet.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://br7x7jag7rrjl" path="res://Scenes/monkey idle-Sheet.png" id="3_vgqql"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6t5aa"]
radius = 7.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_vgqql")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_vgqql")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_vgqql")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_vgqql")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_6t5aa")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_6t5aa")
region = Rect2(150, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(180, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("3_6t5aa")
region = Rect2(210, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(300, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_6t5aa")
region = Rect2(330, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_6t5aa")
region = Rect2(360, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_6t5aa")
region = Rect2(390, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("2_6t5aa")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_6t5aa")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_6t5aa")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_6t5aa")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_6t5aa")
region = Rect2(120, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_8erm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": false,
"name": &"land",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_cvnsp"]
line_spacing = -3.0

[node name="player" type="CharacterBody2D" unique_id=667864553]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=731396070]
position = Vector2(0, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_6t5aa")

[node name="Sprite" type="AnimatedSprite2D" parent="." unique_id=1585470218]
z_index = 1
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_8erm5")
animation = &"land"
autoplay = "idle"

[node name="BufferTimer" type="Timer" parent="." unique_id=1398723664]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="." unique_id=277171519]
one_shot = true

[node name="DebugLabel" type="Label" parent="." unique_id=902184132]
visible = false
offset_left = -20.0
offset_top = -64.0
offset_right = 20.0
offset_bottom = -41.0
grow_horizontal = 2
text = "test"
label_settings = SubResource("LabelSettings_cvnsp")
horizontal_alignment = 1

[connection signal="timeout" from="BufferTimer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
